[project]
name = "ragbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt==0.8",
    "langchain==0.1.6",
    "langchain-community==0.0.20",
    "langchain-groq==0.0.1",
    "markdown>=3.8.2",
    "pandas==2.2.0",
    "plotly==5.18.0",
    "pypdf==4.0.1",
    "pypdf2>=3.0.1",
    "python-docx==1.1.0",
    "python-dotenv==1.0.1",
    "pywin32==306",
    "qdrant-client==1.7.3",
    "sentence-transformers==2.3.1",
    "streamlit==1.31.0",
    "unstructured==0.12.0",
]
